fix: dark mode background issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: system-ui;
-  background: rgba(15, 15, 15, 0.8);
+  background: rgb(63,63,63);
   color: white;
   height: 100vh;
   margin: 0;
